--- a/package.json
+++ b/package.json
@@ -38,8 +38,10 @@
     "babel-cli": "^6.16.0",
     "babel-preset-es2015": "^6.16.0"
   },
+  "peerDependencies": {
+    "babel-relay-plugin": "<1"
+  },
   "dependencies": {
-    "babel-relay-plugin": "0.9.3",
     "deasync": "^0.1.7",
     "graphql-config-parser": "1.1.3"
   }
